refactored getDeleteWord() in WordController to return sorted list of Words